--- a/rev-pipeline.yaml
+++ b/rev-pipeline.yaml
@@ -16,6 +16,8 @@ stages:
       vmImage: 'windows-latest'
     variables:  []
     steps:
+    - script: 'pip install wget'
+      displayName: 'Command Line Script - Install wget'
     # Bash script:  https://docs.microsoft.com/en-us/azure/devops/pipelines/yaml-schema#bash
     - bash:  |
         # Fails if one of the command fails in the script
