--- a/rev-pipeline.yaml
+++ b/rev-pipeline.yaml
@@ -21,6 +21,7 @@ stages:
       displayName: 'Command Line Script - Install wheel for the next stage'
     - bash: |
         pip install wget
+        which wget
       displayName: 'Command Line Script - Install wget'
     - bash: |
         echo $PATH
