--- a/rev-pipeline.yaml
+++ b/rev-pipeline.yaml
@@ -10,6 +10,9 @@ stages:
 - stage:  rev_engineer
   displayName:  Reverse Engineer Database
   variables:  []
+#   Using Azure Pipeline default pool
+#   pool:
+#       vmImage: 'windows-latest'
   jobs:
   - job:  delta_kusto
     variables:  []
@@ -33,7 +36,7 @@ stages:
         echo "Client Version:  $clientVersion"
         wget https://github.com/microsoft/delta-kusto/releases/download/$clientVersion/delta-kusto-windows.tar.gz
         tar --extract --file delta-kusto-windows.tar.gz
-        chmod +x ./delta-kusto
+        chmod +x delta-kusto
       displayName:  Install Delta-Kusto
     - bash:  |
         # Fails if one of the command fails in the script
