--- a/rev-pipeline.yaml
+++ b/rev-pipeline.yaml
@@ -36,7 +36,9 @@ stages:
         echo "Client Version:  $clientVersion"
         wget https://github.com/microsoft/delta-kusto/releases/download/$clientVersion/delta-kusto-windows.tar.gz
         tar --extract --file delta-kusto-windows.tar.gz
-        chmod +x delta-kusto
+        echo $PATH
+        which delta-kusto
+        chmod +x ./delta-kusto
       displayName:  Install Delta-Kusto
     - bash:  |
         # Fails if one of the command fails in the script
