--- a/rev-pipeline.yaml
+++ b/rev-pipeline.yaml
@@ -34,9 +34,9 @@ stages:
         clientVersion=$(curl https://delta-kusto.azurefd.net/clientVersion/unique?fromClientVersion=0)
         # Display the version on console
         echo "Client Version:  $clientVersion"
-        wget https://github.com/microsoft/delta-kusto/releases/download/$clientVersion/delta-kusto-windows.tar.gz
-        tar --extract --file delta-kusto-windows.tar.gz
-        chmod +x /usr/bin/delta-kusto
+        wget https://github.com/microsoft/delta-kusto/releases/download/$clientVersion/delta-kusto-linux.tar.gz
+        tar --extract --file delta-kusto-linux.tar.gz
+        chmod +x ./delta-kusto
       displayName:  Install Delta-Kusto
     - bash:  |
         # Fails if one of the command fails in the script
