--- a/rev-engineer-parameters.yaml
+++ b/rev-engineer-parameters.yaml
@@ -7,6 +7,7 @@ jobs:
             database:  jiaruli-dev
     action:
         filePath:  kql-scripts/complete/dev-update.kql
+#   delta-dev is similiar to push-script-to-prod
   delta-dev:
     current:
         scripts:
@@ -17,7 +18,7 @@ jobs:
             database:  jiaruli-dev
     action:
         pushToConsole:  true
-        filePath:  kql-scripts/delta.kql
+        filePath:  kql-scripts/delta-update.kql
 tokenProvider:
     login:
         tenantId:  to-be-overriden
