--- a/deploy-db/deploy-db-pipeline.yaml
+++ b/deploy-db/deploy-db-pipeline.yaml
@@ -10,12 +10,12 @@ stages:
 - stage:  Packaging
   jobs:
   - job:  Packaging
-    pool:
-      vmImage: 'ubuntu-latest'
+#     pool:
+#       vmImage: 'ubuntu-latest'
     variables:  []
     steps:
     # Publish artefact:  https://docs.microsoft.com/en-us/azure/devops/pipelines/artifacts/pipeline-artifacts#publish-artifacts
-    - publish: documentation/tutorials/az-dev-ops
+    - publish: documentation/d2p
       artifact:  scripts
       displayName: 'Publish Artifact:  scripts'
 - stage:  Staging
@@ -33,4 +33,4 @@ stages:
   # Template reference:  https://docs.microsoft.com/en-us/azure/devops/pipelines/yaml-schema#template-references
   - template: deploy-db-template.yaml
     parameters:
-      env: prod
+      env: jiaruli-pro
