--- a/deploy-db/deploy-db-pipeline.yaml
+++ b/deploy-db/deploy-db-pipeline.yaml
@@ -19,7 +19,7 @@ stages:
     - script: dir
       workingDirectory: $(Agent.BuildDirectory)
       displayName: List contents of a folder
-    - publish: /deploy-db/
+    - publish: /
       artifact:  scripts
       displayName: 'Publish Artifact:  scripts'
 - stage:  Staging
