--- a/deploy-db/deploy-db-pipeline.yaml
+++ b/deploy-db/deploy-db-pipeline.yaml
@@ -19,7 +19,7 @@ stages:
     - script: dir
       workingDirectory: $(Agent.BuildDirectory)
       displayName: List contents of a folder
-    - scripts:
+    - scripts: |
       echo $(Pipeline.Workspace)
       displayName: show the path for publish pipeline artifacts
     - publish: $(Pipeline.Workspace)/
