--- a/deploy-db/deploy-db-pipeline.yaml
+++ b/deploy-db/deploy-db-pipeline.yaml
@@ -26,8 +26,7 @@ stages:
   jobs: 
   - job: Path Verification
     steps:
-    - scripts: dir
-      which "deploy-db-template.yaml"
+    - bash: | which -a deploy-db-template.yaml
       displayName: 'Found the path to the yaml file.'
 - stage:  Staging
   displayName:  Push to staging
