--- a/deploy-db/deploy-db-pipeline.yaml
+++ b/deploy-db/deploy-db-pipeline.yaml
@@ -26,13 +26,10 @@ stages:
   displayName:  Push to staging
   variables:  []
   jobs:
-  - script: dir 
-      which -a deploy-db-template.yaml
-    displayName: 'Found the path to the yaml file.'
   # Template reference:  https://docs.microsoft.com/en-us/azure/devops/pipelines/yaml-schema#template-references
   - template: deploy-db-template.yaml
     parameters:
-      env: stagings 
+      env: jiaruli-dev 
 - stage:  Production
   displayName:  Push to production
   variables:  []
