--- a/deploy-db/deploy-db-template.yaml
+++ b/deploy-db/deploy-db-template.yaml
@@ -37,5 +37,5 @@ jobs:
               echo "Cluster URI:  $clusterUri"
               # Package the login in a JSON payload
               login='{"tenantId":"$(TENANT_ID)","clientId":"$(CLIENT_ID)","secret":"$(SECRET)"}'
-              ./delta-kusto -p $scriptFolder/deploy-db/push-state-to-db-parameters.yaml -o jobs.push-state.current.adx.clusterUri=$clusterUri jobs.push-state.current.adx.database=$env tokenProvider.login=$login
+              ./delta-kusto -p $scriptFolder/deploy-db/push-to-prod.yaml -o jobs.push-script-to-prod.current.adx.clusterUri=$clusterUri jobs.push-script-to-prod.current.adx.database=$env tokenProvider.login=$login
             displayName:  Run Delta-Kusto
