--- a/deploy-db/deploy-db-push.yaml
+++ b/deploy-db/deploy-db-push.yaml
@@ -23,7 +23,7 @@ jobs:
               chmod +x ./delta-kusto
             displayName:  Install Delta-Kusto
           # Download artefacts:  https://docs.microsoft.com/en-us/azure/devops/pipelines/artifacts/pipeline-artifacts#download-artifacts
-          - download: current
+          - download: none
             artifact: scripts
             displayName:  Download artefact 'scripts'
           - bash:  |
