--- a/deploy-db/download-dev.yaml
+++ b/deploy-db/download-dev.yaml
@@ -7,3 +7,5 @@ jobs:
             database:  to-be-overriden
     action:
         filePath:  ../dev-update/dev-update.kql
+        pushToCurrent:  true
+        pushToConsole:  true
