--- a/deploy-db/deploy-db-download.yaml
+++ b/deploy-db/deploy-db-download.yaml
@@ -24,13 +24,13 @@ jobs:
             displayName:  Install Delta-Kusto
           # Download artefacts:  https://docs.microsoft.com/en-us/azure/devops/pipelines/artifacts/pipeline-artifacts#download-artifacts
           - download: current
-            artifact: scripts
-            displayName:  Download artefact 'scripts'
+            artifact: documents
+            displayName:  Download artefact 'documents'
           - bash:  |
               # Fails if one of the command fails in the script
               set -e
               env=${{ parameters.env }}
-              scriptFolder="$(Pipeline.Workspace)/scripts/s"
+              scriptFolder="$(Pipeline.Workspace)/documents"
               echo "Environnement:  $env"
               echo "State folder:  $scriptFolder"
               clusterUri=$(CLUSTER_URI)
