--- a/deploy-db/download-dev.yaml
+++ b/deploy-db/download-dev.yaml
@@ -6,5 +6,5 @@ jobs:
             clusterUri:  to-be-overriden
             database:  to-be-overriden
     action:
-        folderPath:  ../dev-update
+        filePath:  ../dev-update/dev-update.kql
         pushToConsole:  true
