--- a/deploy-db/deploy-db-push.yaml
+++ b/deploy-db/deploy-db-push.yaml
@@ -24,8 +24,8 @@ jobs:
             displayName:  Install Delta-Kusto
           # Download artefacts:  https://docs.microsoft.com/en-us/azure/devops/pipelines/artifacts/pipeline-artifacts#download-artifacts
           - download: current
-            artifact: scripts
-            displayName:  Download Artifact 'scripts'
+            artifact: updated-scripts
+            displayName:  Download Artifact 'updated-scripts'
           - bash:  |
               # Fails if one of the command fails in the script
               set -e
